修复配置发布时失败也提示done的问题。

--- a/distrobution/conf/conf.properties
+++ b/distrobution/conf/conf.properties
@@ -3,5 +3,5 @@
 #confirmEnabled = true
 #accessKey =
 #secretKey =
-#host = localhost
-#port = 8848
+host = mse-40b2a630-p.nacos-ans.mse.aliyuncs.com
+port = 8848
