--- a/distrobution/conf/conf.properties
+++ b/distrobution/conf/conf.properties
@@ -3,5 +3,5 @@
 #confirmEnabled = true
 #accessKey =
 #secretKey =
-host = mse-40b2a630-p.nacos-ans.mse.aliyuncs.com
-port = 8848
+#host = localhost
+#port = 8848
