--- a/command/pom.xml
+++ b/command/pom.xml
@@ -29,6 +29,10 @@
             <groupId>de.vandermeer</groupId>
             <artifactId>asciitable</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
