--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <nacos.client.version>1.4.4</nacos.client.version>
+        <nacos.client.version>2.4.0</nacos.client.version>
         <picocli.version>4.6.3</picocli.version>
         <asciitable.version>0.3.2</asciitable.version>
         <jline.version>2.14.6</jline.version>
@@ -29,6 +29,7 @@
         <gson.version>2.8.9</gson.version>
         <slf4j.version>1.7.36</slf4j.version>
         <logback.version>1.2.11</logback.version>
+        <guava.version>33.3.0-jre</guava.version>
         
         <junit.version>4.13.2</junit.version>
         <mockito.version>4.0.0</mockito.version>
@@ -101,7 +102,11 @@
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
             </dependency>
-    
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
